--- a/files/opt/apps/ventoy/README
+++ b/files/opt/apps/ventoy/README
@@ -21,8 +21,11 @@ Please refer https://www.ventoy.net/en/doc_start.html for details.
 1. sudo sh VentoyWeb.sh 
 2. open your browser and visit http://127.0.0.1:24680
 
-========== VentoyWebDeepin.sh ===============
-1. sudo sh VentoyWebDeepin.sh 
+
+========= VentoyGUI ===================
+VentoyGUI is native GUI program for Linux (GTK/QT)
+1. Just double-click the file (e.g. VentoyGUI.x86_64)
+2. If it can not startup after double-click, you can open the terminal and just execute the file (e.g.  ./VentoyGUI.x86_64)
 
 
 ========== CreatePersistentImg.sh ===============
